fix(mobile): adjust flag icon vertical alignment to middle

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -254,7 +254,7 @@
                 font-size: 1em;
                 width: 1em;
                 height: 1em;
-                vertical-align: text-bottom;
+                vertical-align: middle;
                 margin-right: 0.25em;
                 color: var(--rmm-warn-color);
             }
